Fix nav overlap: scroll-padding-top + nav offset on reveal scroll

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  scroll-padding-top: 72px; /* account for fixed nav */
 }
 
 body {
